// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
<DocumentFragment>
  <div
    class="pf-c-background-image"
    src="[object Object]"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</DocumentFragment>
`;

exports[`allows passing in a single string as the image src 1`] = `
<DocumentFragment>
  <div
    class="pf-c-background-image"
    src="/assets/images/pfbg_1200.jpg"
  >
    <svg
      class="pf-c-background-image__filter"
      height="0"
      width="0"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</DocumentFragment>
`;
